ASP-5024 Set slurmctld prolog and epilog

--- a/lm-composed/etc/slurm.conf
+++ b/lm-composed/etc/slurm.conf
@@ -40,6 +40,8 @@ ReturnToService=0
 #TaskProlog=
 #TaskEpilog=
 #TaskPlugin=
+EpilogSlurmctld=/srv/license-manager-agent-venv/bin/slurmctld_epilog
+PrologSlurmctld=/srv/license-manager-agent-venv/bin/slurmctld_prolog
 #TrackWCKey=no
 #TreeWidth=50
 #TmpFS=
