--- a/lm-cli/pyproject.toml
+++ b/lm-cli/pyproject.toml
@@ -12,7 +12,7 @@ packages = [ { include = "lm_cli" } ]
 
 [tool.poetry.dependencies]
 python = "^3.12"
-pydantic = "^1.9.1"
+pydantic = "^2.8.2"
 rich = "^11.2.0"
 pyperclip = "^1.8.2"
 python-jose = "^3.3.0"
@@ -22,10 +22,11 @@ typer = "^0.4.1"
 pendulum = "3.0.0b1"
 httpx = ">=0.22,<0.24"
 importlib-metadata = "<5.0"
-python-dotenv = "^0.20.0"
+python-dotenv = "^1.0.1"
+pydantic-settings = "^2.3.4"
 
 [tool.poetry.dev-dependencies]
-mypy = "^0.961"
+mypy = "^1.10.0"
 plummet = "^1.1.0"
 pytest-random-order = "^1.0.4"
 pytest-cov = "^3.0.0"
