--- a/lm-simulator/pyproject.toml
+++ b/lm-simulator/pyproject.toml
@@ -7,10 +7,10 @@ license = "MIT"
 packages = [{ include = "lm_simulator" }]
 
 [tool.poetry.dependencies]
-python = "^3.8"
-fastapi = "^0.68.1"
+python = "^3.12"
+fastapi = "^0.111.0"
 SQLAlchemy = "^1.4.23"
-uvicorn = "^0.15.0"
+uvicorn = "^0.30.1"
 requests = "^2.27.1"
 psycopg2 = "2.9.5"
 
@@ -21,11 +21,12 @@ pytest-cov = "^2.12.1"
 pytest-env = "^0.6.2"
 pytest-random-order = "^1.0.4"
 black = "^24.4.2"
-flake8 = "^3.9.2"
+flake8 = "^7.0.0"
 isort = "^5.9.3"
 requests = "^2.26.0"
 Jinja2 = "^3.0.1"
-python-dotenv = "^0.19.0"
+python-dotenv = "^1.0.1"
+pydantic-settings = "^2.3.4"
 
 [tool.pytest.ini_options]
 addopts = "-v --random-order --cov=lm_simulator --cov-report=term-missing --cov-fail-under=85"
