--- a/lm-simulator/docker-compose.yaml
+++ b/lm-simulator/docker-compose.yaml
@@ -4,13 +4,16 @@ services:
   postgres-back:
     image: postgres:14.1
     environment:
-      POSTGRES_PASSWORD: 123
+      POSTGRES_DB: local-db
+      POSTGRES_USER: local-user
+      POSTGRES_PASSWORD: local-pswd
+    ports: ["5432:5432"]
+    restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready", "-U", "postgres", "-h", "localhost"]
-      interval: 5s
+      test: ["CMD-SHELL", "pg_isready"]
+      interval: 10s
       timeout: 5s
       retries: 5
-    user: postgres
 
   lm-simulator:
     build:
@@ -20,7 +23,11 @@ services:
       postgres-back:
         condition: service_healthy
     environment:
-      DATABASE_URL: ${DATABASE_URL:-postgresql://postgres:123@postgres-back:5432/postgres}
-    ports:
-      - "8000:8000"
+      DATABASE_HOST: postgres-back
+      DATABASE_USER: local-user
+      DATABASE_PSWD: local-pswd
+      DATABASE_NAME: local-db
+      DATABASE_PORT: 5432
+
+    ports: ["8000:8000"]
     command: uvicorn lm_simulator.main:app --reload --workers 1 --host 0.0.0.0 --port 8000
