[ASP-5025] Refactor of License Manager Simulator to fix FK issue (#368)
* ASP-5025 Update database URL params

* ASP-5025 Update dependencies

* ASP-5025 Refact Database

* ASP-5025 Refact CRUD

* ASP-5025 Refact Models

* ASP-5025 Refact Schemas

* ASP-5025 Refact Main

* ASP-5025 Run tests in docker-compose

* ASP-5025 Remove leftovers

* ASP-5025 Refact CRUD tests

* ASP-5025 Update commit logic

* ASP-5025 Refact conftest

* ASP-5025 Update tests

* ASP-5025 Finish tests refactor

* ASP-5025 Add entry to CHANGELOG

* ASP-5025 Update job application example

* ASP-5025 Remove blank lines

* ASP-5025 Change ports to avoid conflict

* ASP-5025 Fix test

* ASP-5025 Address comments from code review

--- a/lm-simulator/Dockerfile-ci
+++ b/lm-simulator/Dockerfile-ci
@@ -8,10 +8,8 @@ COPY ./pyproject.toml ./poetry.lock* /app/
 
 RUN pip install poetry \
     && poetry config virtualenvs.in-project true \
-    && poetry install --no-root --no-dev \
+    && poetry install --no-root \
     && rm -rf "$POETRY_CACHE_DIR"
-
-ENV PATH="/app/.venv/bin:$PATH"
 
 COPY ./lm_simulator /app/lm_simulator
 
