--- a/lm-simulator/pyproject.toml
+++ b/lm-simulator/pyproject.toml
@@ -52,6 +52,13 @@ src_paths = ["lm_simulator", "tests"]
 multi_line_output = 3
 include_trailing_comma = true
 
+[tool.poetry.scripts]
+lmutil = "lm_simulator.fake_binaries.flexlm.lmutil:main"
+lmxendutil = "lm_simulator.fake_binaries.lmx.lmxendutil:main"
+lstc_qrun = "lm_simulator.fake_binaries.lsdyna.lstc_qrun:main"
+olixtool = "lm_simulator.fake_binaries.olicense.olixtool:main"
+rlmutil = "lm_simulator.fake_binaries.rlm.rlmutil:main"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
