Update GitHub Actions

--- a/.github/workflows/publish_images_to_ecr.yaml
+++ b/.github/workflows/publish_images_to_ecr.yaml
@@ -22,7 +22,7 @@ on:
         default: 'lm-api'
         options:
           - lm-api
-          - lm-simulator
+          - lm-simulator-api
 
 jobs:
   publish:
