--- a/.github/workflows/prepare_release.yaml
+++ b/.github/workflows/prepare_release.yaml
@@ -63,15 +63,29 @@ jobs:
           echo "::set-output name=version::$(poetry version --short)"
 
       - id: lm-sim-package
-        name: Bump version on the simulator
+        name: Bump version on the Simulator
         working-directory: lm-simulator
         run: |
           ../release-scripts/prepare-release.sh ${{ github.event.inputs.bump_rule }}
           echo "Poetry version is: $(poetry version --short)"
-          echo "::set-output name=version::$(poetry version --short)"          
+          echo "::set-output name=version::$(poetry version --short)" 
+
+      - id: lm-sim-api-package
+        name: Bump version on the Simulator API
+        working-directory: lm-simulator-api
+        run: |
+          ../release-scripts/prepare-release.sh ${{ github.event.inputs.bump_rule }}
+          echo "Poetry version is: $(poetry version --short)"
+          echo "::set-output name=version::$(poetry version --short)" 
 
       - name: Fail if poetry packages version don't match
-        if: ${{ steps.agent-package.outputs.version != steps.backend-package.outputs.version != steps.lm-cli-package.outputs.version != steps.lm-sim-package.outputs.version }}
+        if: |
+          ${{ steps.agent-package.outputs.version != |
+              steps.backend-package.outputs.version != |
+              steps.lm-cli-package.outputs.version != |
+              steps.lm-sim-package.outputs.version != |
+              steps.lm-sim-api-package.outputs.version |
+          }}
         run: echo "Poetry packages version don't match!"
 
       - uses: peter-evans/create-pull-request@v4
