--- a/lm-simulator-api/pyproject.toml
+++ b/lm-simulator-api/pyproject.toml
@@ -4,6 +4,9 @@ version = "3.4.0"
 description = "Provides an API for interfacing with License Manager Simulator"
 authors = ["OmniVector Solutions <info@omnivector.solutions>"]
 license = "MIT"
+readme = "README.md"
+repository = "https://github.com/omnivector-solutions/license-manager"
+documentation = "https://omnivector-solutions.github.io/license-manager/"
 packages = [{ include = "lm_simulator_api" }]
 
 [tool.poetry.dependencies]
@@ -18,6 +21,7 @@ psycopg2 = "2.9.5"
 yarl = "^1.9.2"
 asyncpg = "^0.28"
 py-buzz = "^4.1.0"
+toml = "^0.10.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
