--- a/lm-agent/pyproject.toml
+++ b/lm-agent/pyproject.toml
@@ -19,6 +19,7 @@ tabulate = "^0.8.9"
 sentry-sdk = ">=1.3.1,<3.0.0"
 py-buzz = "^3.2.1"
 pydantic-settings = "^2.3.3"
+apscheduler = "^3.10.4"
 
 [tool.poetry.dev-dependencies]
 mypy = "^1.10.1"
@@ -57,11 +58,12 @@ line-length = 110
 module = [
     "buzz",
     "pkg_resources",
+    "apscheduler.*"
 ]
 ignore_missing_imports = true
 
 [tool.poetry.scripts]
-reconcile = "lm_agent.reconcile:main"
+license-manager-agent = "lm_agent.main:main"
 slurmctld-prolog = "lm_agent.workload_managers.slurm.slurmctld_prolog:main"
 slurmctld-epilog = "lm_agent.workload_managers.slurm.slurmctld_epilog:main"
 
