PENG-2369 modifications for PR review
This commit include modifications for improving texting in the README.md and slight improves for better readability

--- a/lm-agent-snap/snap/snapcraft.yaml
+++ b/lm-agent-snap/snap/snapcraft.yaml
@@ -35,7 +35,7 @@ description: |
 
   - reservation-identifier: Reservation name used when doing the reconciliation. Defaults to *license-manager-reservation*.
 
-  - lm_user: System user name for creating reservations on behalf of. Defaults to *license-manager*.
+  - lm_user: System user name used when creating reservations. Defaults to *license-manager*.
 
   - stat-interval: Interval in seconds used to report the cluster status to the API. Defaults to 60.
 
