Attempt to fix the *Output metadata* action in the *build-publish* job.
This commit attempts to fix the behaviour of the *Output metadata* action
in which it is expected to run only for the *lm-agent* sub project.

--- a/.github/workflows/publish_on_tag.yaml
+++ b/.github/workflows/publish_on_tag.yaml
@@ -57,7 +57,7 @@ jobs:
 
       - name: Output metadata
         working-directory: ${{ matrix.sub_project }}
-        if: ${{ matrix.sub_project }} == "lm-agent"
+        if: matrix.sub_project == 'lm-agent'
         id: extract-metadata
         run: |
           VERSION=$(find ./dist -name '*.tar.gz' | sed 's/.\/dist\/license_manager_agent-\(.*\)\.tar\.gz/\1/')
