--- a/lm-composed/etc/slurm.conf
+++ b/lm-composed/etc/slurm.conf
@@ -40,8 +40,8 @@ ReturnToService=0
 #TaskProlog=
 #TaskEpilog=
 #TaskPlugin=
-EpilogSlurmctld=/srv/license-manager-agent-venv/bin/slurmctld_epilog
-PrologSlurmctld=/srv/license-manager-agent-venv/bin/slurmctld_prolog
+#EpilogSlurmctld=
+#PrologSlurmctld=
 #TrackWCKey=no
 #TreeWidth=50
 #TmpFS=
@@ -72,6 +72,7 @@ SelectTypeParameters=CR_CPU_Memory
 #PriorityMaxAge=1-0
 #
 # LOGGING
+DebugFlags=Script
 SlurmctldDebug=3
 SlurmctldLogFile=/var/log/slurm/slurmctld.log
 SlurmdDebug=3
